# aws-shop-project

./: .gitignore  .gitmodules  README.md  justfile
_dev/: create_tables.py  docker-compose.yml  env.local.json  fill_tables.py  gen.py  pyproject.toml
_dev/bruno_requests/: Create product.yml  (+5 more)
backend/import_service/: .gitignore  cdk.json  openapi.yml  pyproject.toml
backend/import_service/infra/: app.py
backend/import_service/infra/infra/: infra_stack.py
backend/import_service/infra/stacks/: import_product_stack.py
backend/import_service/services/common/: pyproject.toml
backend/import_service/services/common/shared/: create_handler.py
backend/import_service/services/import_file_parser/: main.py  pyproject.toml
backend/import_service/services/import_products_file/: main.py  pyproject.toml
backend/import_service/src/import_products_file/: main.py
backend/import_service/src/shared/: create_handler.py
backend/import_service/tests/: conftest.py  test_import_file_parser.py  test_import_products_file.py
backend/product_service/: .gitignore  openapi.yml  pyproject.toml
backend/product_service/infra/: app.py  cdk.json  requirements.txt
backend/product_service/infra/infra/: infra_stack.py
backend/product_service/src/create/: main.py  routes.py
backend/product_service/src/get_by_id/: main.py  routes.py
backend/product_service/src/get_list/: main.py  routes.py
backend/product_service/src/shared/: clients.py  data.py  model.py  service.py
backend/product_service/tests/: conftest.py  test_create.py  test_get_by_id.py  test_get_list.py
(+2 files in other folders)
