[project]
name = "product-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.28.0",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "aws-lambda-powertools[aws-sdk]>=3.28.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"] 